started working on document listener and validation of text input in the field

--- a/README
+++ b/README
@@ -5,9 +5,12 @@ Some java GUI app..
 TODO:
 -------
 	
-	* Fix a glitch that after startup the list of periods is not updated 
+	* Insure that there is no duplicates in the db and in the table
 	* Add periods at the launch time until the latest is after today
 	* Add table editors, so start and end dates of a Period could be changed
 	* Add show all check box
+	* Add menubar
 	* Color line text accordingly: gray - past, red - current, black - future
+	
+	
 	 
